整合项目,删除无用文件
