# controllers/admin.go
@@ -25,15 +25,19 @@ func (u *AdminController) Login() {
 	result := &models.LoginResult{}
 	var admin models.Admin
 	json.Unmarshal(u.Ctx.Input.RequestBody, &admin)
-	beego.BeeLogger.Warning("%+v\n", admin)
-	beego.Info(admin.Name)
-	beego.Info(admin.Password)
-	result.Code = 0
-	result.Msg = "OK"
-	result.Data.User = admin
-	result.Data.Token = models.GenToken()
-	result.Data.Name="管理员"
-	result.Data.UUId="admin-uuid"
+	adminName := beego.AppConfig.String("adminName")
+	adminPWD := beego.AppConfig.String("adminPWD")
+	if admin.Name==adminName && admin.Password==adminPWD {
+		result.Code = 0
+		result.Msg = "OK"
+		result.Data.User = admin
+		result.Data.Token = models.GenToken()
+		result.Data.Name="管理员"
+		result.Data.UUId="sinksmell"
+	}else {
+		result.Code=100
+		result.Msg="用户名或密码错误!"
+	}
 	u.Data["json"] = result
 	u.ServeJSON()
 }
